# isaacutils

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/isaacutils/: __init__.py  mail.py  posts.py
